src/components/landing/postCarousel/style/PostCard.css
.post-card {
  display: flex;
  flex-direction: column;
  text-align: center;

  &:has(.nested-post) {
    position: absolute;
  }

  max-width: 250px;

  gap: 10px;

  border-radius: 2px;
  padding: 10px 0;

  border: 2px solid black;
  box-shadow: var(--shadow);

  background-color: gold;

  .nested-post {
    position: relative;
    right: 15px;
  }
}

